# fastapi_doc

./: .gitignore  04_query_parameters_string_validation.py  05_path_parameters_numeric_validation.py  06_query_parameters_models.py  07_body_multiple_parameters.py  08_body_fields.py  09_body_nested_models.py  10_declare_request_example_data.py  11_extra_data_types.py  12_cookie_parameters.py  15_header_parameter_models.py  16_response_model_return_type.py  17_extra_models.py  18_reponse_status_code.py  20_form_models.py  21_request_files.py  22_request_forms_and_files.py  24_path_operation_configuration.py  25_json_compatible_encoder.py  26_body_updates.py  27_dependencies.py  29_sub_dependencies.py  30_dependencies_path_decorators.py  32_dependencies_with_yield.py  33_security_first_steps.py  36_oauth2_jwt.py  37_middleware.py  38_cors.py  dependencies.py  main.py  pyproject.toml  query_paremeters.py
app/: config.py  config_v2.py  config_v3.py  main.py  main_v1.py  pyproject.toml
app/examples/: 03_request_body.py  14_cookie_parameter_models.py  34_get_current_user.py  35_simple_oauth2.py  40_stream_json_lines.py  42_background_tasks.py  43_metadata_docs_urls.py  45_testing_main.py
app/examples/advanced/: 01_stream_data.py  02_path_operation.py  03_additional_status_code.py  (+28 more)
app/routers/: items.py
app/tests/: test_admin.py  test_items.py  test_main.py  test_users.py
examples/: 19_form_data.py  31_global_dependencies.py  41_server_sent_events.py
routers/: items.py  users.py
src/: index.ts
src/client/: index.ts  sdk.gen.ts  types.gen.ts
templates/: item.html
(+39 files in other folders)
